eks/apps/cortex/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cortex-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: ${certificate_arn}
spec:
  rules:
    - host: ${cortex_host}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cortex-svc
                port:
                  number: 80
  tls:
    - hosts:
        - ${cortex_host}
      secretName: dummy-required-by-k8s
